# hello_dune_ocamls

./: .ocamlformat  PPX.md  README.md  dune-project  dune.md  hello_ocamls.opam  my_sexp_file  ocamlopt_vs_ocamlc.md  person.json  ppx.md  simple_test
_build/: .db  .digest-db  log
_build/default/: README.md  hello_ocamls.dune-package  hello_ocamls.install
_build/default/.dune/: configurator  configurator.v2
_build/default/_doc/_html/: index.html
_build/default/_doc/_html/hello_ocamls/: index.html
_build/default/_doc/_mlds/hello_ocamls/: index.mld
_build/default/_doc/_odoc/pkg/hello_ocamls/: page-index.odoc
_build/default/_doc/_odocls/hello_ocamls/: page-index.odocl
_build/default/lib/: hello_ocamls.cma  hello_ocamls.cmxa  hello_ocamls.cmxs
_build/default/lib/.hello_ocamls.objs/byte/: hello_ocamls.cmi  hello_ocamls.cmo  hello_ocamls.cmt
_build/default/lib/.hello_ocamls.objs/native/: hello_ocamls.cmx
_build/default/lib/.merlin-conf/: lib-hello_ocamls
_build/default/test/: dune  ref.ml  refref.ml
_build/default/test/.merlin-conf/: exe-refref
_build/default/test/.refref.eobjs/: dune__exe.ml-gen  dune__exe__Refref.intf.d  refref.ml.d
_build/default/test/.refref.eobjs/byte/: dune__exe.cmi  dune__exe.cmo  dune__exe.cmt  dune__exe__Refref.cmi  dune__exe__Refref.cmti
_build/default/test/.refref.eobjs/native/: dune__exe.cmx  dune__exe__Refref.cmx
_build/install/default/lib/hello_ocamls/: META  dune-package  opam
lib/: dune
ppxstudy/: README.md  dune
ppxstudy/examples/: README.md  at_examples.ml  double_at_examples.ml  double_percent_examples.ml  dune  percent_examples.ml  run_examples.ml  triple_at_examples.ml  triple_percent_examples.ml  triple_percent_examples.mli
ppxstudy/rewriters/: README.md  dune  ppx_alias.ml  ppx_auto.ml  ppx_cached.ml  ppx_calc.ml  ppx_debug.ml  ppx_formats.ml  ppx_is_type.ml  ppx_log.ml  ppx_logged.ml  ppx_module_wrapper.ml  ppx_range.ml  ppx_regex.ml  ppx_timed.ml  ppx_valid.ml  ppx_wrapped.ml
test/: ADTs.ml  GADT.ml  a_type_a.ml  aliase.ml  basic.ml  class_object_test.ml  constructor_test.ml  constructor_variant.ml  dune  exn.ml  extension_test.ml  first_class_module.ml  first_class_module_test.ml  flow.ml  fuctor_using_module_args.ml  func.ml  functor_test.ml  json_test.ml  json_test2.ml  json_test3.ml  json_test4.ml  json_test5.ml  list_test.ml  main.ml  module_test.ml  monad.ml  monad_test.ml  object_test.ml  option.ml  pattern-match.ml  pattern_match_test.ml  person.json  pointer.ml  record.ml  ref.ml  refref.ml  result.ml  s_expression.ml  string.ml  string_test.ml  (+3 more)
test/class_object/: README.md  animal.ml  animal.mli
